--- a/sass/components/_swiper.scss
+++ b/sass/components/_swiper.scss
@@ -8,11 +8,13 @@
 .swiper-pagination-bullets.swiper-pagination-horizontal,
 .swiper-pagination-custom,
 .swiper-pagination-fraction {
-  bottom: 0px;
-  left: 0;
-  width: 100%;
-  z-index: 100;
+  flex-direction: row-reverse;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  padding-right: 130px;
 }
+
 .swiper-pagination-bullet {
   background: var(--swiper-pagination-bullet-inactive-color, #ffffff);
   opacity: var(--swiper-pagination-bullet-inactive-opacity, 0.4);
@@ -30,32 +32,9 @@
   opacity: var(--swiper-pagination-bullet-opacity, 1);
 }
 
-.swiper-pagination {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.swiper-button-next,
-.swiper-button-prev {
-  position: absolute;
-  top: 50%;
-
-  width: calc(var(--swiper-navigation-size) / 44 * 27);
-  height: var(--swiper-navigation-size);
-  margin-top: calc(0px - (var(--swiper-navigation-size) / 2));
-  z-index: 10;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--swiper-navigation-color, var(--swiper-theme-color));
-}
-
 .swiper {
   width: 1170px;
   min-height: fit-content;
-  padding-bottom: 30px;
 }
 
 @media screen and (max-width: 1199px) {
@@ -74,13 +53,5 @@
 @media screen and (max-width: 767px) {
   .swiper {
     width: 345px;
-    padding-bottom: 60px;
-  }
-
-  .swiper-horizontal > .swiper-pagination-bullets,
-  .swiper-pagination-bullets.swiper-pagination-horizontal,
-  .swiper-pagination-custom,
-  .swiper-pagination-fraction {
-    bottom: 30px;
   }
 }
