--- a/sass/components/_swiper.scss
+++ b/sass/components/_swiper.scss
@@ -12,7 +12,8 @@
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  padding-right: 130px;
+  padding-right: 100px;
+  top: 78%;
 }
 
 .swiper-pagination-bullet {
