--- a/css/main.css
+++ b/css/main.css
@@ -515,6 +515,7 @@ img {
 }
 
 .hero__content {
+  height: 100%;
   display: flex;
   flex-flow: column;
   position: relative;
@@ -1518,7 +1519,7 @@ input[type=radio] {
 .swiper-pagination-bullets.swiper-pagination-horizontal,
 .swiper-pagination-custom,
 .swiper-pagination-fraction {
-  flex-direction: row-reverse;
+  justify-content: end;
   display: flex;
   align-items: center;
   box-sizing: border-box;
