--- a/css/main.css
+++ b/css/main.css
@@ -225,6 +225,7 @@ img {
 @media screen and (max-width: 767px) {
   .section-title {
     font-size: 24px;
+    margin: 0 0 30px 0;
   }
   .dropdown__link {
     color: var(--secondary-text-color);
@@ -460,12 +461,13 @@ img {
     color: aliceblue;
   }
   .mobile-menu {
+    box-sizing: border-box;
     position: fixed;
     overflow-y: scroll;
     left: 0;
     top: 51px;
     width: 100vw;
-    height: calc(100dvh - 51px);
+    height: calc(100vh - 51px);
     background: linear-gradient(180deg, #191f32 2.92%, #305e8a 49.72%, #4aa7f0 97.41%);
     z-index: 1;
     opacity: 0;
@@ -500,7 +502,7 @@ img {
   position: relative;
   background: linear-gradient(180deg, #191f32 2.92%, #305e8a 49.72%, #4aa7f0 97.41%);
   padding-top: 40px;
-  padding-bottom: 80px;
+  padding-bottom: 100px;
 }
 
 .hero__background-img {
@@ -525,11 +527,11 @@ img {
 .hero__title {
   font-family: var(--title-font);
   font-weight: 900;
-  font-size: 40px;
+  font-size: 36px;
   line-height: 1.3;
   width: 100%;
   letter-spacing: 2px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   text-transform: uppercase;
   color: #ffffff;
 }
@@ -543,7 +545,6 @@ img {
   display: flex;
   flex-flow: column;
   justify-content: space-between;
-  order: 1;
   width: 70%;
 }
 
@@ -562,11 +563,10 @@ img {
   display: flex;
   justify-content: center;
   width: 25%;
-  order: 2;
 }
 
 .hero__svg {
-  width: 90%;
+  width: 100%;
 }
 
 .slider__controls {
@@ -575,15 +575,13 @@ img {
 
 @media screen and (max-width: 1199px) {
   .hero {
-    padding-bottom: 75px;
+    padding-bottom: 80px;
   }
   .hero__thumb {
     display: flex;
-    order: 2;
   }
   .hero__image {
     display: flex;
-    order: 1;
     margin: 0 auto;
   }
   .hero__thumb {
@@ -838,7 +836,7 @@ input[type=radio] {
     gap: 30px;
   }
   .services-vps__item {
-    width: 45%;
+    width: 50%;
   }
 }
 @media screen and (max-width: 767px) {
@@ -849,10 +847,13 @@ input[type=radio] {
     width: 100%;
   }
   .services-vps__list {
+    width: 100%;
+    justify-content: center;
     flex-wrap: wrap;
+    gap: 40px;
   }
   .services-vps__item {
-    width: 200px;
+    margin: 0 auto;
   }
 }
 .faq {
@@ -1191,6 +1192,14 @@ input[type=radio] {
   }
 }
 @media screen and (max-width: 767px) {
+  .advantages-steps {
+    flex-flow: column;
+    margin-bottom: 30px;
+  }
+  .advantages-steps img {
+    margin: 0 auto 30px;
+    width: 50%;
+  }
   .advantages-steps .section-title {
     text-align: center;
   }
@@ -1504,58 +1513,77 @@ input[type=radio] {
   .couverage .section-title {
     margin-bottom: 30px;
   }
+  .couverage__marker--kyiv {
+    top: 13%;
+    right: 40%;
+  }
+  .couverage__marker--amsterdam {
+    top: 7%;
+    right: 59%;
+  }
 }
 @media screen and (max-width: 767px) {
   .couverage {
     padding-bottom: 30px;
   }
+  .couverage__marker--kyiv {
+    top: -2%;
+    right: 38%;
+  }
+  .couverage__marker--amsterdam {
+    top: -8%;
+    right: 56%;
+  }
 }
-.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
-.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
-  margin: 0 var(--swiper-pagination-bullet-horizontal-gap, 10px);
-}
-
-.swiper-horizontal > .swiper-pagination-bullets,
-.swiper-pagination-bullets.swiper-pagination-horizontal,
-.swiper-pagination-custom,
-.swiper-pagination-fraction {
-  justify-content: end;
-  display: flex;
-  align-items: center;
-  box-sizing: border-box;
-  padding-right: 100px;
-  top: 78%;
-}
-
-.swiper-pagination-bullet {
-  background: var(--swiper-pagination-bullet-inactive-color, #ffffff);
-  opacity: var(--swiper-pagination-bullet-inactive-opacity, 0.4);
+.splide__pagination {
+  bottom: 12px;
+  left: inherit;
+  padding: 0;
+  position: absolute;
+  right: 120px;
+  z-index: 1;
 }
 
-.swiper-pagination-bullet-active {
-  width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 12px));
-  height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 12px));
-  opacity: var(--swiper-pagination-bullet-opacity, 1);
-}
-
-.swiper {
-  width: 1170px;
-  min-height: fit-content;
+.splide__pagination__page {
+  margin: 3px 8px;
 }
 
 @media screen and (max-width: 1199px) {
-  .swiper {
-    width: 767px;
+  .hero {
+    padding-bottom: 100px;
   }
-  .swiper-horizontal > .swiper-pagination-bullets,
-.swiper-pagination-bullets.swiper-pagination-horizontal,
-.swiper-pagination-custom,
-.swiper-pagination-fraction {
-    bottom: 30px;
+  .hero__svg {
+    width: 100%;
+  }
+  .hero__image {
+    margin: 0 auto 40px;
+  }
+  .splide__pagination {
+    top: -200px;
+    left: 0;
+    right: 0;
   }
 }
 @media screen and (max-width: 767px) {
-  .swiper {
-    width: 345px;
+  .hero__image {
+    display: none;
+  }
+  .hero__title {
+    margin-bottom: 30px;
+    font-size: 28px;
+  }
+  .hero__thumb {
+    margin-bottom: 30px;
+  }
+  .hero__thumb {
+    padding-bottom: 60px;
+    margin-bottom: 0;
+  }
+  .hero__description {
+    margin-bottom: 0;
+  }
+  .splide__pagination {
+    top: auto;
+    bottom: 125px;
   }
 }/*# sourceMappingURL=main.css.map */
