--- a/sass/base/_utils.scss
+++ b/sass/base/_utils.scss
@@ -270,6 +270,7 @@ img {
 @media screen and (max-width: 767px) {
   .section-title {
     font-size: 24px;
+    margin: 0 0 30px 0;
   }
   .dropdown__link {
     color: var(--secondary-text-color);
