--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -215,12 +215,14 @@
   }
 
   .mobile-menu {
+    box-sizing: border-box;
     position: fixed;
     overflow-y: scroll;
     left: 0;
     top: 51px;
     width: 100vw;
-    height: calc(100dvh - 51px);
+    height: calc(100vh - 51px);
+
     background: linear-gradient(
       180deg,
       #191f32 2.92%,
