--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,4 +12,4 @@
 @import "./components/reviews";
 @import "./components/couverage";
 
-@import "./components/swiper";
+@import "./components/splide";
