--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
   margin: 0;
   line-height: 1.25;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -30,7 +31,6 @@ img {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  box-sizing: border-box;
 }
 @media screen and (min-width: 375px) {
   .container {
@@ -461,17 +461,17 @@ img {
     color: aliceblue;
   }
   .mobile-menu {
-    box-sizing: border-box;
     position: fixed;
     overflow-y: scroll;
     left: 0;
     top: 51px;
     width: 100vw;
-    height: calc(100vh - 51px);
+    height: calc(100dvh - 51px);
     background: linear-gradient(180deg, #191f32 2.92%, #305e8a 49.72%, #4aa7f0 97.41%);
     z-index: 1;
     opacity: 0;
     padding-top: 30px;
+    padding-bottom: 30px;
     transition: transform var(--timing-function), opacity var(--timing-function);
     pointer-events: none;
   }
@@ -485,7 +485,6 @@ img {
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    box-sizing: border-box;
     align-items: center;
   }
   .mobile-menu .navbar__list {
