--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -33,7 +33,7 @@
 .hero__title {
   font-family: var(--title-font);
   font-weight: 900;
-  font-size: 36px;
+  font-size: 40px;
   line-height: 1.3;
   width: 100%;
   letter-spacing: 2px;
@@ -77,28 +77,10 @@
   width: 100%;
 }
 
-// .slider__viewbox {
-//   overflow: hidden;
-// }
-
-// .slider-content {
-//   display: flex;
-//   flex-wrap: nowrap;
-//   transition: transform var(--timing-function);
-// }
-
-// .slider__container {
-//   width: 100%;
-//   flex-shrink: 0;
-// }
-
-.slider__controls {
-  display: none;
-  // position: relative;
-  // z-index: 1;
-}
-
 @media screen and (max-width: 1199px) {
+  .hero__title {
+    font-size: 36px;
+  }
   .hero {
     padding-bottom: 80px;
   }
