--- a/css/main.css
+++ b/css/main.css
@@ -1292,7 +1292,11 @@ input[type=radio] {
 }
 
 .values__content--2 {
-  width: 40%;
+  width: 10%;
+}
+
+.values__content--3 {
+  width: 30%;
 }
 
 .values__description {
@@ -1307,7 +1311,7 @@ input[type=radio] {
 
 .values__item {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
