--- a/sass/components/_values.scss
+++ b/sass/components/_values.scss
@@ -6,7 +6,7 @@
 .values__box {
   display: flex;
   align-items: center;
-  gap: 60px;
+  gap: 30px;
 }
 
 .values__content--1 {
@@ -21,6 +21,7 @@
 }
 
 .values__content--3 {
+  padding-top: 30px;
   width: 30%;
 }
 
@@ -28,10 +29,16 @@
   margin-bottom: 30px;
 }
 
-.values__list {
+.values__list--img {
   display: flex;
   flex-flow: column;
   gap: 20px;
+}
+
+.values__list--description {
+  display: flex;
+  flex-flow: column;
+  gap: 60px;
 }
 
 .values__item {
@@ -41,7 +48,6 @@
 }
 
 .values__text {
-  width: 70%;
   font-size: 12px;
 }
 
