--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -74,7 +74,7 @@
 }
 
 .hero__svg {
-  width: 100%;
+  width: 80%;
 }
 
 @media screen and (max-width: 1199px) {
@@ -90,9 +90,9 @@
   }
 
   .hero__image {
-    display: flex;
-
-    margin: 0 auto;
+    // display: flex;
+    // margin: 0 auto;
+    display: none;
   }
 
   .hero__thumb {
