--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -92,9 +92,9 @@
   align-items: center;
   text-transform: none;
   width: 100%;
+  background-color: transparent;
 
   &:hover {
-    background-color: var(--secondary-background-color);
     color: var(--light-blue-text);
   }
 }
@@ -119,6 +119,7 @@
 }
 
 .navbar__item {
+  cursor: pointer;
   position: relative;
 }
 
@@ -145,6 +146,7 @@
 }
 
 .menu-button {
+  cursor: pointer;
   display: none;
   margin: 0;
   padding: 0;
@@ -185,6 +187,10 @@
   width: 60%;
 }
 
+.mobile-menu__buttons {
+  display: none;
+}
+
 @media screen and (max-width: 1199px) {
   .topbar {
     gap: 5%;
@@ -196,12 +202,23 @@
 }
 
 @media screen and (max-width: 767px) {
+  .topbar {
+    display: none;
+  }
   .page-header {
     top: 0;
   }
 
   .topbar {
+    gap: 5%;
+    padding: 5px 0;
+  }
+  .topbar-quality {
     display: none;
+  }
+
+  .topbar-buttons {
+    width: 100%;
   }
 
   .menu-button {
@@ -230,8 +247,8 @@
     );
     z-index: 1;
     opacity: 0;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     transition: transform var(--timing-function), opacity var(--timing-function);
     pointer-events: none;
 
@@ -242,12 +259,8 @@
     }
 
     .mobile-menu__container {
-      padding-left: 15px;
-      padding-right: 15px;
-      margin-left: auto;
-      margin-right: auto;
-
-      align-items: center;
+      padding-left: 60px;
+      padding-right: 60px;
     }
 
     .navbar__list {
@@ -255,11 +268,35 @@
     }
   }
 
-  .navbar {
-    padding: 5px 0 5px 0;
+  .navbar__item {
+    width: 100%;
   }
 
-  .navbar__item {
-    width: 250px;
+  .dropdown__menu--lang {
+    background-color: var(--primary-background-color);
+
+    z-index: 5;
+    position: absolute;
+    top: 52px;
+
+    & .dropdown__link {
+      color: var(--primary-text-color);
+    }
+  }
+
+  .mobile-menu__buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    align-items: center;
+  }
+
+  .navbar__item--width {
+    width: 100px;
+  }
+
+  .button--lang {
+    width: 100%;
   }
 }
