services-cards__item--blue

--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -121,6 +121,7 @@ input[type="radio"] {
 }
 
 .services-cards__item--blue {
+  position: relative;
   background-color: var(--price-card-bcg);
 }
 
