--- a/sass/components/_values.scss
+++ b/sass/components/_values.scss
@@ -34,7 +34,7 @@
   width: 50px;
   height: 45px;
   transform: translateY(-50%);
-  background-image: url(/images/value-illustration_1.svg);
+  background-image: url(../images/value-illustration_1.svg);
 }
 
 .values__text--before_2 {
@@ -50,7 +50,7 @@
   width: 50px;
   height: 50px;
   transform: translateY(-50%);
-  background-image: url(/images/value-illustration_2.svg);
+  background-image: url(../images/value-illustration_2.svg);
 }
 
 .values__text--before_3 {
@@ -66,7 +66,7 @@
   width: 50px;
   height: 52px;
   transform: translateY(-50%);
-  background-image: url(/images/value-illustration_3.svg);
+  background-image: url(../images/value-illustration_3.svg);
 }
 
 .values__text--before_4 {
@@ -82,7 +82,7 @@
   width: 73px;
   height: 55px;
   transform: translateY(-50%);
-  background-image: url(/images/value-illustration_4.svg);
+  background-image: url(../images/value-illustration_4.svg);
 }
 
 .values__text--before_5 {
@@ -98,7 +98,7 @@
   width: 83px;
   height: 57px;
   transform: translateY(-50%);
-  background-image: url(/images/value-illustration_5.svg);
+  background-image: url(../images/value-illustration_5.svg);
 }
 // content: "";
 // display: block;
