--- a/sass/components/_values.scss
+++ b/sass/components/_values.scss
@@ -146,16 +146,16 @@
 }
 
 @media screen and (max-width: 1199px) {
+  .values__content--1 {
+    width: 50%;
+  }
+
+  .values__box {
+    gap: 120px;
+  }
+
   .values__list {
     gap: 30px;
-  }
-
-  .values__content--1 {
-    width: 100%;
-  }
-
-  .values__content--2 {
-    width: 100%;
   }
 }
 
