--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -11,7 +11,7 @@
   padding-bottom: 100px;
 }
 
-.hero__background-img {
+.hero__background {
   background-image: url(../images/hero-decor.svg);
   background-size: contain;
   background-repeat: no-repeat;
@@ -28,6 +28,7 @@
   flex-flow: column;
   position: relative;
   justify-content: space-between;
+  gap: 30px;
 }
 
 .hero__title {
@@ -37,29 +38,26 @@
   line-height: 1.3;
   width: 100%;
   letter-spacing: 2px;
-  margin-bottom: 20px;
   text-transform: uppercase;
-
   color: #ffffff;
 }
 
 .hero__thumb {
-  gap: 5%;
   display: flex;
+  justify-content: space-between;
 }
 
 .hero__info {
   display: flex;
   flex-flow: column;
   justify-content: space-between;
-
+  gap: 30px;
   width: 70%;
 }
 
 .hero__description {
   color: var(--secondary-text-color);
   font-size: 18px;
-  margin-bottom: 20px;
 }
 
 .hero__buttons {
