--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,12 +4,18 @@
 @import "./components/hero";
 @import "./components/services";
 @import "./components/faq";
-@import "./components/footer";
 @import "./components/advantages";
 @import "./components/contact";
 @import "./components/values";
 @import "./components/payment";
 @import "./components/reviews";
 @import "./components/couverage";
+@import "./components/footer";
 
 @import "./components/splide";
+
+@import "./components/dedicated-page";
+@import "./components/dedicated-contact";
+@import "./components/bonuses";
+@import "./components/dedicated-advantages";
+@import "./components/price-dedicated";
