--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,16 @@ body {
 
 ul {
   list-style: none;
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
 }
 
 a {
@@ -20,30 +30,41 @@ a {
   text-decoration: none;
   display: block;
 }
+a:hover {
+  text-decoration: none;
+}
 
 img {
   display: block;
   height: auto;
 }
 
-.container {
+p {
+  margin: 0;
+}
+
+label {
+  margin: 0;
+}
+
+.vsys-container {
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
 @media screen and (min-width: 375px) {
-  .container {
+  .vsys-container {
     width: 375px;
   }
 }
 @media screen and (min-width: 768px) {
-  .container {
+  .vsys-container {
     width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
-  .container {
+  .vsys-container {
     width: 1200px;
   }
 }
@@ -112,6 +133,7 @@ img {
   border: none;
   background-color: transparent;
   color: var(--secondary-text-color);
+  font-size: 16px;
   text-transform: uppercase;
   font-weight: 500;
   padding: 15px 5px;
@@ -121,6 +143,7 @@ img {
 }
 .dropdown__button:hover, .dropdown__button:focus {
   color: var(--accent-color);
+  outline: none;
 }
 
 .button {
@@ -159,6 +182,7 @@ img {
 }
 .button--white:hover, .button--white:focus {
   color: var(--accent-color);
+  text-decoration: none;
   border-color: var(--light-blue-text);
 }
 
@@ -166,6 +190,10 @@ img {
   background-color: var(--primary-background-color);
   color: var(--accent-color);
   border: 1px solid #88c8fa;
+}
+
+.button--border {
+  border: none;
 }
 
 .button--light:hover,
@@ -214,6 +242,11 @@ img {
   color: var(--secondary-background-color);
 }
 
+@media screen and (max-width: 1199px) {
+  .dropdown__button {
+    font-size: 12px;
+  }
+}
 .dropdown__button--open + .dropdown__menu {
   display: block;
 }
@@ -310,7 +343,6 @@ img {
   color: var(--secondary-text-color);
   position: relative;
   white-space: nowrap;
-  text-decoration: underline;
   display: flex;
   align-items: center;
   transition: color var(--timing-function);
@@ -374,7 +406,6 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-width: 60%;
 }
 
 .navbar__item {
@@ -390,6 +421,11 @@ img {
   color: var(--secondary-text-color);
   position: relative;
   white-space: nowrap;
+}
+
+.vsys-logo:hover {
+  color: var(--secondary-text-color);
+  text-decoration: none;
 }
 
 .vsys-logo__virtual {
@@ -441,7 +477,7 @@ img {
 }
 
 .mobile-menu {
-  width: 60%;
+  width: 70%;
 }
 
 .mobile-menu__buttons {
@@ -454,6 +490,11 @@ img {
   }
   .mobile-menu {
     width: 100%;
+    flex-basis: fit-content;
+  }
+  .vsys-logo,
+.vsys-logo__virtual {
+    font-size: 12px;
   }
 }
 @media screen and (max-width: 767px) {
@@ -503,7 +544,7 @@ img {
     transform: translateY(0%);
     pointer-events: all;
   }
-  .mobile-menu .mobile-menu__container {
+  .mobile-menu .mobile-menu__vsys-container {
     padding-left: 60px;
     padding-right: 60px;
   }
@@ -543,7 +584,7 @@ img {
   padding-bottom: 100px;
 }
 
-.hero__background-img {
+.hero__background {
   background-image: url(../images/hero-decor.svg);
   background-size: contain;
   background-repeat: no-repeat;
@@ -560,6 +601,7 @@ img {
   flex-flow: column;
   position: relative;
   justify-content: space-between;
+  gap: 30px;
 }
 
 .hero__title {
@@ -569,27 +611,26 @@ img {
   line-height: 1.3;
   width: 100%;
   letter-spacing: 2px;
-  margin-bottom: 20px;
   text-transform: uppercase;
   color: #ffffff;
 }
 
 .hero__thumb {
-  gap: 5%;
   display: flex;
+  justify-content: space-between;
 }
 
 .hero__info {
   display: flex;
   flex-flow: column;
   justify-content: space-between;
+  gap: 30px;
   width: 70%;
 }
 
 .hero__description {
   color: var(--secondary-text-color);
   font-size: 18px;
-  margin-bottom: 20px;
 }
 
 .hero__buttons {
@@ -803,6 +844,10 @@ input[type=radio] {
   opacity: 1;
 }
 
+.services-cards__checkmark {
+  font-size: 18px;
+}
+
 .serversContent {
   width: 100%;
 }
@@ -909,7 +954,7 @@ input[type=radio] {
   left: 0;
   right: 0;
   bottom: 0;
-  margin-top: 100px;
+  margin-top: 60px;
   position: absolute;
   pointer-events: none;
 }
@@ -980,202 +1025,6 @@ input[type=radio] {
     position: relative;
     padding-bottom: 60px;
     padding-top: 30px;
-  }
-}
-.footer {
-  background-color: var(--secondary-background-color);
-  padding: 40px 0;
-}
-.footer .vsys-logo {
-  margin-bottom: 20px;
-}
-
-.footer__content {
-  display: flex;
-  gap: 10%;
-}
-
-.footer__description {
-  color: var(--secondary-text-color);
-  min-width: 45%;
-  font-weight: 500;
-  margin-bottom: 20px;
-}
-
-.footer-nav {
-  min-width: 45%;
-  justify-content: space-between;
-  display: flex;
-}
-
-.footer__box {
-  display: flex;
-  flex-flow: column;
-  gap: 20px;
-}
-
-.footer-nav__list {
-  display: flex;
-  flex-flow: column;
-  gap: 10px;
-}
-
-.footer__subtitle {
-  font-family: var(--title-font);
-  font-size: 16px;
-  font-weight: 700;
-  color: var(--secondary-text-color);
-}
-
-.footer-nav__link {
-  color: var(--secondary-text-color);
-  font-weight: 500;
-  transition: color var(--timing-function);
-  text-transform: uppercase;
-}
-.footer-nav__link:hover {
-  color: var(--accent-color);
-}
-
-.footer-contacts__adress {
-  color: var(--secondary-text-color);
-  font-style: normal;
-  margin-bottom: 20px;
-  font-weight: 500;
-}
-
-.footer-contacts__link {
-  color: var(--secondary-text-color);
-  font-style: normal;
-  font-weight: 500;
-}
-
-.footer-contacts__phone {
-  color: var(--secondary-text-color);
-  font-style: normal;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-}
-
-.footer-contacts__mail {
-  color: var(--secondary-text-color);
-  font-style: normal;
-}
-
-.footer-social__list {
-  min-width: 25%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer-social__link {
-  color: var(--secondary-text-color);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--accent-color);
-  border-radius: 10px;
-  width: 40px;
-  height: 40px;
-  transition: color var(--timing-function), background-color var(--timing-function);
-}
-.footer-social__link:hover {
-  color: var(--accent-color);
-  background-color: transparent;
-}
-
-.footer-social__svg {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer-social__svg--color {
-  fill: currentColor;
-}
-
-.footer-payment {
-  min-width: 45%;
-  display: flex;
-  gap: 10px;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.footer-payment__item {
-  align-items: center;
-}
-
-.footer-info {
-  display: flex;
-  justify-content: space-between;
-  gap: 30%;
-  margin-top: 30px;
-}
-
-.footer-payment__img {
-  width: 60px;
-  height: 45px;
-}
-
-.footer-payment > .footer__subtitle {
-  width: 70px;
-  align-items: center;
-  font-size: 14px;
-}
-
-@media screen and (max-width: 1199px) {
-  .footer__description {
-    margin-bottom: 30px;
-  }
-  .footer__content {
-    flex-flow: column;
-  }
-  .footer-contacts__list {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-  }
-  .footer-info {
-    gap: 15%;
-  }
-  .footer-payment {
-    width: 100%;
-  }
-  .footer-payment .footer__subtitle {
-    display: none;
-  }
-}
-@media screen and (max-width: 767px) {
-  .footer-info {
-    flex-flow: column;
-    gap: 30px;
-  }
-  .footer-contacts__list {
-    flex-flow: column;
-    margin-bottom: 30px;
-  }
-  .footer-payment {
-    row-gap: 20px;
-    flex-wrap: wrap;
-    width: 100%;
-  }
-  .footer-social__list {
-    width: 50%;
-  }
-  .footer__box {
-    width: 30%;
-  }
-  .footer-social__list {
-    width: 70%;
-    margin: 0 auto;
-  }
-  .footer-payment__item {
-    width: 30%;
-  }
-  .footer-payment__item {
-    display: flex;
-    justify-content: center;
   }
 }
 .advantages {
@@ -1279,6 +1128,7 @@ input[type=radio] {
 .contact__container {
   display: flex;
   justify-content: space-around;
+  align-items: center;
   position: relative;
 }
 
@@ -1668,6 +1518,190 @@ input[type=radio] {
     left: -1%;
   }
 }
+.vsys-footer {
+  background-color: var(--secondary-background-color);
+  padding: 60px 0;
+}
+.vsys-footer .vsys-logo {
+  margin-bottom: 20px;
+}
+
+.footer__content {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 10%;
+}
+
+.footer__info {
+  min-width: 45%;
+}
+
+.footer__description {
+  color: var(--secondary-text-color);
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.footer-contact__link {
+  color: var(--secondary-text-color);
+  font-style: normal;
+  font-weight: 500;
+  transition: color var(--timing-function);
+}
+.footer-contact__link:hover {
+  color: var(--accent-color);
+  text-decoration: none;
+}
+
+.footer-contact__item:not(:last-child) {
+  margin-bottom: 10px;
+  /* styles */
+}
+
+.footer-nav {
+  min-width: 45%;
+  justify-content: space-between;
+  display: flex;
+}
+
+.footer__subtitle {
+  font-family: var(--title-font);
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--secondary-text-color);
+}
+
+.footer-nav__link {
+  color: var(--secondary-text-color);
+  font-weight: 500;
+  padding: 5px 0;
+  transition: color var(--timing-function);
+  text-transform: uppercase;
+}
+.footer-nav__link:hover {
+  color: var(--accent-color);
+  text-decoration: none;
+}
+
+.footer__box {
+  display: flex;
+  flex-flow: column;
+  gap: 20px;
+}
+
+.footer__thumb {
+  display: flex;
+  justify-content: space-between;
+  gap: 30%;
+  margin-top: 30px;
+}
+
+.footer-social__list {
+  min-width: 25%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-social__link {
+  color: var(--secondary-text-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--accent-color);
+  border-radius: 10px;
+  width: 40px;
+  height: 40px;
+  transition: color var(--timing-function), background-color var(--timing-function);
+}
+.footer-social__link:hover {
+  color: var(--accent-color);
+  background-color: transparent;
+}
+
+.footer-social__svg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-social__svg--color {
+  fill: currentColor;
+}
+
+.footer-payment__list {
+  min-width: 45%;
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-payment__item {
+  align-items: center;
+}
+
+.footer-payment__img {
+  width: 60px;
+  height: 45px;
+}
+
+.footer-payment > .footer__subtitle {
+  width: 70px;
+  align-items: center;
+  font-size: 14px;
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__content {
+    flex-flow: column;
+    gap: 30px;
+  }
+  .footer__thumb {
+    flex-flow: column;
+    gap: 30px;
+  }
+  .footer-social__list {
+    margin: 0 auto;
+    width: 50%;
+  }
+  .footer-payment {
+    width: 100%;
+  }
+  .footer-payment .footer__subtitle {
+    display: none;
+  }
+  .footer-payment__list .footer__subtitle {
+    display: none;
+  }
+}
+@media screen and (max-width: 767px) {
+  .footer-payment {
+    row-gap: 20px;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .footer-social__list {
+    width: 50%;
+  }
+  .footer__box {
+    width: 30%;
+  }
+  .footer-social__list {
+    width: 85%;
+    display: flex;
+    margin: 0 auto;
+  }
+  .footer-payment__list {
+    row-gap: 20px;
+    flex-wrap: wrap;
+  }
+  .footer-payment__item {
+    width: 30%;
+    display: flex;
+    justify-content: center;
+  }
+}
 .splide__pagination {
   bottom: 12px;
   left: inherit;
@@ -1719,4 +1753,195 @@ input[type=radio] {
     top: auto;
     bottom: 125px;
   }
+}
+.hero-dedicated {
+  padding-bottom: 60px;
+}
+
+.hero-dedicated__list {
+  list-style: disc;
+  color: var(--secondary-text-color);
+  padding-left: 20px;
+}
+
+.hero-dedicated__text {
+  color: var(--secondary-text-color);
+  font-size: 24px;
+}
+
+.hero-dedicated__item:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.hero-dedicated__svg {
+  width: 90%;
+}
+
+.dedicated-faq__background {
+  background-image: url(/images/dedicated-faq_background.svg);
+}
+
+.dedicated-services {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.dedicated-services .services-vps__list {
+  margin-bottom: 60px;
+}
+
+.dedicated-services .services-card__list {
+  margin-bottom: 0;
+}
+
+.dedicated-contact .section-title {
+  margin-bottom: 30px;
+}
+
+.dedicated-contact__background {
+  background: linear-gradient(165.95deg, rgba(74, 167, 240, 0.76) 10.01%, #e0f1ff 101.3%);
+  position: relative;
+}
+
+.dedicated-contact__background--svg {
+  background-image: url(/images/dedicated-background__image.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  width: 100%;
+  bottom: 0;
+}
+
+.dedicated-contact__content {
+  display: flex;
+  align-items: center;
+  gap: 60px;
+  padding: 60px 60px;
+}
+
+@media screen and (max-width: 1199px) {
+  .dedicated-contact .section-title {
+    text-align: center;
+  }
+  .dedicated-contact__content {
+    flex-flow: column;
+    gap: 30px;
+  }
+}
+.bonuses {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.bonuses .services-dedicated__title {
+  margin-bottom: 0;
+}
+
+.bonuses__list {
+  row-gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.bonuses__item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  width: 50%;
+}
+
+.bonuses__svg {
+  fill: currentColor;
+}
+
+.bonuses__checkmark {
+  color: var(--accent-color);
+  font-size: 34px;
+}
+
+.dedicated-agvantages {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.dedicated-agvantages__content {
+  display: flex;
+  gap: 60px;
+}
+
+.dedicated-agvantages__description {
+  font-size: 16px;
+}
+
+.price-dedicated {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.price-billing__content {
+  margin-bottom: 60px;
+}
+
+.price-dedicated__card {
+  background-color: var(--price-card-bcg);
+  border-radius: 10px;
+  padding: 10px 20px;
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+  gap: 30px;
+}
+.price-dedicated__card .services-cards__title {
+  margin-bottom: 0;
+}
+
+.price-billing__buttons {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+}
+
+.price-billing__item {
+  transition: filter var(--timing-function);
+}
+
+.price-billing__item:hover {
+  filter: drop-shadow(0px 11px 5px rgba(0, 0, 0, 0.15));
+}
+
+.price-billing__button {
+  background-color: var(--primary-background-color);
+  border: 1px SOLID var(--accent-color);
+  padding: 10px 20px;
+  border-radius: 10px;
+}
+
+.price-billing__button p {
+  text-transform: uppercasece__list;
+  margin-top: 5px;
+}
+
+.price-billing__button--blue {
+  background-color: var(--price-card-bcg);
+}
+
+.price-dedicated__list {
+  display: flex;
+  gap: 30px;
+  width: 80%;
+}
+
+.price-dedicated__tariff {
+  width: 10%;
+}
+
+.price-dedicated__box {
+  width: 10%;
+}
+
+.price-dedicated__info {
+  font-size: 12px;
+  display: flex;
+  text-align: left;
+  flex-wrap: nowrap;
 }/*# sourceMappingURL=main.css.map */
