--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,6 @@
-.footer {
+.vsys-footer {
   background-color: var(--secondary-background-color);
-  padding: 40px 0;
+  padding: 60px 0;
 
   & .vsys-logo {
     margin-bottom: 20px;
@@ -8,33 +8,42 @@
 }
 
 .footer__content {
+  width: 100%;
   display: flex;
+  justify-content: space-between;
   gap: 10%;
+}
+
+.footer__info {
+  min-width: 45%;
 }
 
 .footer__description {
   color: var(--secondary-text-color);
-  min-width: 45%;
   font-weight: 500;
   margin-bottom: 20px;
+}
+
+.footer-contact__link {
+  color: var(--secondary-text-color);
+  font-style: normal;
+  font-weight: 500;
+  transition: color var(--timing-function);
+  &:hover {
+    color: var(--accent-color);
+    text-decoration: none;
+  }
+}
+
+.footer-contact__item:not(:last-child) {
+  margin-bottom: 10px;
+  /* styles */
 }
 
 .footer-nav {
   min-width: 45%;
   justify-content: space-between;
   display: flex;
-}
-
-.footer__box {
-  display: flex;
-  flex-flow: column;
-  gap: 20px;
-}
-
-.footer-nav__list {
-  display: flex;
-  flex-flow: column;
-  gap: 10px;
 }
 
 .footer__subtitle {
@@ -48,39 +57,26 @@
 .footer-nav__link {
   color: var(--secondary-text-color);
   font-weight: 500;
-
+  padding: 5px 0;
   transition: color var(--timing-function);
   text-transform: uppercase;
-
   &:hover {
     color: var(--accent-color);
+    text-decoration: none;
   }
 }
 
-.footer-contacts__adress {
-  color: var(--secondary-text-color);
-  font-style: normal;
-  margin-bottom: 20px;
-  font-weight: 500;
+.footer__box {
+  display: flex;
+  flex-flow: column;
+  gap: 20px;
 }
 
-.footer-contacts__link {
-  color: var(--secondary-text-color);
-  font-style: normal;
-
-  font-weight: 500;
-}
-
-.footer-contacts__phone {
-  color: var(--secondary-text-color);
-  font-style: normal;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-}
-
-.footer-contacts__mail {
-  color: var(--secondary-text-color);
-  font-style: normal;
+.footer__thumb {
+  display: flex;
+  justify-content: space-between;
+  gap: 30%;
+  margin-top: 30px;
 }
 
 .footer-social__list {
@@ -117,7 +113,7 @@
   fill: currentColor;
 }
 
-.footer-payment {
+.footer-payment__list {
   min-width: 45%;
   display: flex;
   gap: 10px;
@@ -127,13 +123,6 @@
 
 .footer-payment__item {
   align-items: center;
-}
-
-.footer-info {
-  display: flex;
-  justify-content: space-between;
-  gap: 30%;
-  margin-top: 30px;
 }
 
 .footer-payment__img {
@@ -148,22 +137,19 @@
 }
 
 @media screen and (max-width: 1199px) {
-  .footer__description {
-    margin-bottom: 30px;
-  }
-
   .footer__content {
     flex-flow: column;
+    gap: 30px;
   }
 
-  .footer-contacts__list {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
+  .footer__thumb {
+    flex-flow: column;
+    gap: 30px;
   }
 
-  .footer-info {
-    gap: 15%;
+  .footer-social__list {
+    margin: 0 auto;
+    width: 50%;
   }
 
   .footer-payment {
@@ -173,19 +159,13 @@
   .footer-payment .footer__subtitle {
     display: none;
   }
+
+  .footer-payment__list .footer__subtitle {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 767px) {
-  .footer-info {
-    flex-flow: column;
-    gap: 30px;
-  }
-
-  .footer-contacts__list {
-    flex-flow: column;
-    margin-bottom: 30px;
-  }
-
   .footer-payment {
     row-gap: 20px;
     flex-wrap: wrap;
@@ -201,15 +181,18 @@
   }
 
   .footer-social__list {
-    width: 70%;
+    width: 85%;
+    display: flex;
     margin: 0 auto;
+  }
+
+  .footer-payment__list {
+    row-gap: 20px;
+    flex-wrap: wrap;
   }
 
   .footer-payment__item {
     width: 30%;
-  }
-
-  .footer-payment__item {
     display: flex;
     justify-content: center;
   }
